--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MrManhattan/touchy-xmpp",
   "dependencies": {
+    "http-server": "^0.7.4",
     "node-gcm-ccs": "0.0.0"
   }
 }
